# learnWords

./: CMakeLists.txt  README.md
include/: DatabaseManager.hpp  DictionaryState.hpp  LetterToWordTrain.hpp  MainWindow.hpp  MeaningVariantsTrain.hpp  State.hpp  TrainState.hpp  Utility.hpp  VariantsTrain.hpp  WelcomeTrain.hpp  WordVariantsTrain.hpp  WordsRainTrain.hpp
src/: DatabaseManager.cpp  DictionaryState.cpp  LetterToWordTrain.cpp  MainWindow.cpp  MeaningVariantsTrain.cpp  State.cpp  TrainState.cpp  Utility.cpp  VariantsTrain.cpp  WelcomeTrain.cpp  WordVariantsTrain.cpp  WordsRainTrain.cpp
